--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,26 @@
-#hangman-ascii{ line-height:1; }
+#hangman-ascii{ 
+    line-height:1; 
+    font-weight: bold;
+    font-size: 36px;
+    color:#fe0500;
+}
 
 .letter{ margin-right:10px; }
 
 /*#play-again{ display:none;}*/
+
+.well{ font-size:20px; }
+
+.well.gallows{
+    background-color:#000;
+    color:#fff;
+}
+
+.well.score{
+    background-color:#444;
+    color:#ddd;
+}
+
+#guessed{ letter-spacing: 6px; }
+
+h1{ margin-top:0; }
